--- a/Front/src/app/dashboard/solicitudes/solicitudes.component.scss
+++ b/Front/src/app/dashboard/solicitudes/solicitudes.component.scss
@@ -10,8 +10,8 @@ mat-expansion-panel-header {
 
 .accordion_size {
   min-width: 150px;
-  max-width: 500px;
-  width: 100%;
+  max-width: 100%;
+  width: 95%;
 }
 
 mat-form-field {
