add class of interfaces and estudio

--- a/Front/src/app/dashboard/misolicitud/misolicitud.component.scss
+++ b/Front/src/app/dashboard/misolicitud/misolicitud.component.scss
@@ -233,6 +233,10 @@ ul {
 .btSelectErr {
   color: #fd3300;
 }
+
+.form-control{
+  width: 40%;
+}
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
 
