--- a/Front/src/app/shared/register/register.component.html
+++ b/Front/src/app/shared/register/register.component.html
@@ -27,7 +27,7 @@
       </fieldset> -->
      <div>
       <button type="button"  (click)="calc(0)" class="mx-3">Atras  <i class="far fa-hand-point-left"></i></button>
-        <button type="submit"  [disabled]="miFormulario.invalid">Continuar</button>
+        <button type="submit"  [disabled]="miFormulario.invalid"><i class="fa fa-save"></i> Continuar</button>
 
       </div>
 
