--- a/Front/src/app/dashboard/solicitudes/solicitudes.component.scss
+++ b/Front/src/app/dashboard/solicitudes/solicitudes.component.scss
@@ -13,7 +13,15 @@ mat-expansion-panel-header {
   max-width: 100%;
   width: 95%;
 }
-
+.cuenta{
+  background-color: rgb(165,190,190);
+  border-color: cornsilk;
+  border-style: dotted;
+  color: rgb(30, 138, 233);
+}
+.k {
+  width: 100%;
+}
 mat-form-field {
   margin-right: 12px;
 }
