--- a/Front/src/app/dashboard/solicitudes/solicitudes.component.html
+++ b/Front/src/app/dashboard/solicitudes/solicitudes.component.html
@@ -42,20 +42,27 @@
                   hiddenToggle="false">
                   <mat-expansion-panel-header>
                     <mat-panel-title>
-                      <span class="text_center" *ngFor="let producto of
-                        productos | searchnameproduct: solicitud.idProduct;
-                        index as i"> {{
+                      <div class="col-12 col-sm-4 col-md-4  col-lg-4 col-xl-4" >
+                        <span class="text_center"> Monto: ${{ solicitud.value |
+                          number: '1.0-0' }} </span>
+                      </div>
+                      <div class="col-12 col-sm-5 col-md-6  col-lg-6 col-xl-6">
+                        <span class="text_center" *ngFor="let producto of
+                        productos | searchnameproduct: solicitud.idProduct"> {{
                         producto.name }}</span>
                       <span class="spacer"></span>
-                      <span class="text_center"> Monto: ${{ solicitud.value |
-                        number: '1.0-0' }} </span>
-                      <span class="spacer"></span>
-                      <button class="btInProgress" *ngIf="solicitud.estate ==
-                        'Completo'" mat-raised-button>En Estudio</button>
-                      <button class="btToDo" *ngIf="solicitud.estate ==
-                        'Aprobada'" mat-raised-button>{{solicitud.estate }}</button>
-                      <button class="btErr" *ngIf="solicitud.estate ==
-                        'Rechazada'" mat-raised-button>{{solicitud.estate }}</button>
+                      </div>
+                      <div class="col-12 col-sm-3 col-md-2  col-lg-2 col-xl-2">
+                        <span class="spacer"></span>
+                        <button class="btInProgress" *ngIf="solicitud.estate ==
+                          'Completo'" mat-raised-button>En Estudio</button>
+                        <button class="btInProgress" *ngIf="solicitud.estate ==
+                          'Facturacion'" mat-raised-button>En Facturacion</button>
+                        <button class="btToDo" *ngIf="solicitud.estate ==
+                          'Aprobada'" mat-raised-button>{{solicitud.estate }}</button>
+                        <button class="btErr" *ngIf="solicitud.estate ==
+                          'Rechazada'" mat-raised-button>{{solicitud.estate }}</button>
+                      </div>
                     </mat-panel-title>
                   </mat-expansion-panel-header>
 
@@ -66,36 +73,46 @@
                       [idSolicitud]="solicitud._id"></app-estudio>
                   </mat-panel-title>
 
-                  <mat-action-row>
-                    <button class="btSelectInProgress" mat-button
-                      (click)="cambiarEstado(solicitud, 'Completo')">En Estudio</button>
-                    <button class="btSelectDone" mat-button
-                      (click)="cambiarEstado(solicitud, 'Aprobada')">Aprobada</button>
-                    <button class="btSelectErr" mat-button
-                      (click)="cambiarEstado(solicitud, 'Rechazada')">Rechazada</button>
-                    <span class="spacer"></span>
-                  </mat-action-row>
 
-                  <form class="form" (ngSubmit)="enviarR(solicitud._id)"
-                    [formGroup]="formularioResultado" #f="ngForm">
-                    <mat-action-row>
 
-                      <mat-form-field class="form-group col-md-8 pl-1">
-                        <mat-label>Resultados:</mat-label>
-                        <textarea matInput formControlName="resultado"
-                          placeholder="Escriba los resultados del estudio y una
-                          calificacion" required>
-                        </textarea>
-                      </mat-form-field>
-                      <mat-form-field appearance="fill" class="form-group col-md-2">
-                        <mat-select formControlName="calificacion" required>
-                          <mat-option *ngFor="let item of [].constructor(11);let
-                            i= index" [value]="i">{{i}}</mat-option>
-                        </mat-select>
-                        <mat-label>Calificacion</mat-label>
-                      </mat-form-field>
-                      <button matbutton class="btn btn-sm" type="submit">Enviar</button>
-                    </mat-action-row>
+                  <form class="form" (ngSubmit)="enviarR(solicitud._id)" [formGroup]="formularioResultado" #f1="ngForm">
+                      <div class="row resultados">
+
+                        <div class="col-md-5 mt-2">
+                          <div  class="form-group  pt-1">
+                            <mat-label>Resultados:</mat-label>
+                            <textarea  class="textA" matInput formControlName="resultado"
+                              placeholder="Escriba los resultados del estudio y una
+                              calificacion" required>
+                            </textarea>
+                          </div>
+                        </div>
+
+                        <div class="col-md-3 mt-2">
+                          <mat-label>Calificacion:</mat-label>
+                          <div  class="form-group pt-1">
+                            <mat-select class="calificacion" formControlName="calificacion" required>
+                              <mat-option *ngFor="let item of [].constructor(11);let
+                                i= index" [value]="i">{{i}}</mat-option>
+                            </mat-select>
+
+                          </div>
+                        </div>
+
+                        <div class="col-md-4 mt-3">
+
+                            <div class="row">
+                              <div class="col-12 col-sm-12 col-md-6 p-2">
+                                <button type="submit" class="btSelectDone btn-block " mat-button [disabled]="!formularioResultado.valid" (click)="cambiarEstado(solicitud, 'Aprobada')">Aprobada</button>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-6 p-2">
+                                <button type="submit" class="btSelectErr btn-block" mat-button [disabled]="!formularioResultado.valid" (click)="cambiarEstado(solicitud, 'Rechazada')">Rechazada</button>
+                              </div>
+                            </div>
+
+                        </div>
+
+                      </div>
                   </form>
 
 
@@ -140,26 +157,33 @@
                   solicitudesAprobadas |
                   filterforamount:page2:search2:tiposearch"
                   hiddenToggle="false">
-                  <mat-expansion-panel-header>
-                    <mat-panel-title>
-
-                      <span class="text_center" *ngFor="let producto of
-                        productos | searchnameproduct: solicitud.idProduct"> {{
-                        producto.name }}</span>
-                      <span class="spacer"></span>
-
-                      <span class="text_center"> Monto: ${{ solicitud.value |
-                        number: '1.0-0' }} </span>
+                  <mat-expansion-panel-header class="mb-2">
+                    <mat-panel-title >
 
 
-                      <span class="spacer"></span>
-                      <!-- <button class="btDone" *ngIf="solicitud.estate == 'Pendiente'" mat-raised-button>{{solicitud.estate }}</button> -->
-                      <button class="btInProgress" *ngIf="solicitud.estate ==
-                        'Completo'" mat-raised-button>En Estudio</button>
-                      <button class="btToDo" *ngIf="solicitud.estate ==
-                        'Aprobada'" mat-raised-button>{{solicitud.estate }}</button>
-                      <button class="btErr" *ngIf="solicitud.estate ==
-                        'Rechazada'" mat-raised-button>{{solicitud.estate }}</button>
+                        <div class="col-12 col-sm-4 col-md-4  col-lg-4 col-xl-4" >
+                          <span class="text_center"> Monto: ${{ solicitud.value |
+                            number: '1.0-0' }} </span>
+                        </div>
+                        <div class="col-12 col-sm-5 col-md-6  col-lg-6 col-xl-6">
+                          <span class="text_center" *ngFor="let producto of
+                          productos | searchnameproduct: solicitud.idProduct"> {{
+                          producto.name }}</span>
+                        <span class="spacer"></span>
+                        </div>
+                        <div class="col-12 col-sm-3 col-md-2  col-lg-2 col-xl-2">
+                          <span class="spacer"></span>
+                          <button class="btInProgress" *ngIf="solicitud.estate ==
+                            'Completo'" mat-raised-button>En Estudio</button>
+                          <button class="btInProgress" *ngIf="solicitud.estate ==
+                            'Facturacion'" mat-raised-button>En Facturacion</button>
+                          <button class="btToDo" *ngIf="solicitud.estate ==
+                            'Aprobada'" mat-raised-button>{{solicitud.estate }}</button>
+                          <button class="btErr" *ngIf="solicitud.estate ==
+                            'Rechazada'" mat-raised-button>{{solicitud.estate }}</button>
+                        </div>
+
+
                     </mat-panel-title>
                   </mat-expansion-panel-header>
 
@@ -171,38 +195,43 @@
 
 
 
-                  <form class="form cuenta" (ngSubmit)="enviarCuenta(solicitud._id)"
-                  [formGroup]="formularioCuenta" #f="ngForm" *ngIf="!solicitud.fechaConsignacion">
-                  <mat-action-row>
-
-                    <mat-form-field class="form-group col-md-2 pl-1">
+                <form class="form" (ngSubmit)="enviarCuenta(solicitud)" [formGroup]="formularioCuenta" #f="ngForm" *ngIf="!solicitud.fechaConsignacion">
+                  <mat-action-row class="cuenta row">
+                    <p class="mr-md-5 col-md-6">Nota: Los Dias 29 al 31 Del Mes Se Facturaran Desde El 1 Del Siguiente Mes</p>
+                    <mat-form-field class="form-group col-md-4 mr-md-5">
                       <mat-label>Fecha De Consignacion</mat-label>
-                      <input type="date" matInput formControlName="fechaConsignacion"
-                        required>
+                      <input type="date" matInput formControlName="fechaConsignacion" required>
+                   </mat-form-field>
 
-                    </mat-form-field>
-
-                    <button matbutton class="btn btn-sm btn-primary" type="submit">Enviar</button>
+                    <button matbutton class="btn  btn-cuenta" type="submit" >Enviar</button>
                   </mat-action-row>
                 </form>
 
-                <mat-action-row *ngIf="solicitud.fechaConsignacion">
-                  <button (click)="facturar()" class="btn btn-sm btn-primary" >Generar Facturacion</button>
-                </mat-action-row>
+                <!-- <mat-action-row class="col-md-2" *ngIf="solicitud.fechaConsignacion">
+                  <button (click)="facturar(solicitud)" class="btn btn-sm btn-primary" >Generar Facturacion</button>
+                </mat-action-row> -->
 
-                  <mat-action-row>
-                    <!-- <button class="btSelectTodo" mat-button (click)="cambiarEstado(solicitud, 'Pendiente')">Pendiente</button> -->
-                    <button class="btSelectInProgress" mat-button
-                      (click)="cambiarEstado(solicitud, 'Completo')">En Estudio</button>
-                    <button class="btSelectDone" mat-button
-                      (click)="cambiarEstado(solicitud, 'Aprobada')">Aprobada</button>
-                    <button class="btSelectErr" mat-button
-                      (click)="cambiarEstado(solicitud, 'Rechazada')">Rechazada</button>
-                    <span class="spacer"></span>
-                    <p>Fecha De Consignacion:  </p>
-                    {{solicitud.fechaConsignacion}}
-                    <!-- <mat-icon color="primary" (click)="deleteRequest(solicitud._id)" arial-Label="delete_forever">delete_forever</mat-icon> -->
-                  </mat-action-row>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <button class="btSelectInProgress btn-block" mat-button (click)="cambiarEstado(solicitud, 'Completo')">En Estudio</button>
+                      </div>
+                      <div class="col-md-2">
+                        <button class="btSelectDone btn-block" mat-button (click)="cambiarEstado(solicitud, 'Facturacion')">Facturacion</button>
+                      </div>
+                      <div class="col-md-2">
+                        <button class="btSelectErr btn-block" mat-button (click)="cambiarEstado(solicitud, 'Rechazada')">Rechazada</button>
+                      </div>
+                      <div class="col-md-6" *ngIf="solicitud.fechaConsignacion">
+                        <p class="mt-2">Fecha De Consignacion:
+                        {{ solicitud.fechaConsignacion | date:'d/M/y'}} </p>
+                      </div>
+                      <div class="col-md-6" *ngIf="!solicitud.fechaConsignacion">
+                        <p class="mt-2">Aun Sin Fecha De Consignacion!!!</p>
+
+                      </div>
+                    </div>
+
 
                 </mat-expansion-panel>
               </mat-accordion>
@@ -248,22 +277,29 @@
                   <mat-expansion-panel-header>
                     <mat-panel-title>
 
-                      <span class="text_center" *ngFor="let producto of
+                      <div class="col-12 col-sm-4 col-md-4  col-lg-4 col-xl-4" >
+                        <span class="text_center"> Monto: ${{ solicitud.value |
+                          number: '1.0-0' }} </span>
+                      </div>
+                      <div class="col-12 col-sm-5 col-md-6  col-lg-6 col-xl-6">
+                        <span class="text_center" *ngFor="let producto of
                         productos | searchnameproduct: solicitud.idProduct"> {{
                         producto.name }}</span>
                       <span class="spacer"></span>
-                      <span class="text_center"> Monto: ${{ solicitud.value |
-                        number: '1.0-0' }} </span>
+                      </div>
+                      <div class="col-12 col-sm-3 col-md-2  col-lg-2 col-xl-2">
+                        <span class="spacer"></span>
+                        <button class="btInProgress" *ngIf="solicitud.estate ==
+                          'Completo'" mat-raised-button>En Estudio</button>
+                        <button class="btInProgress" *ngIf="solicitud.estate ==
+                          'Facturacion'" mat-raised-button>En Facturacion</button>
+                        <button class="btToDo" *ngIf="solicitud.estate ==
+                          'Aprobada'" mat-raised-button>{{solicitud.estate }}</button>
+                        <button class="btErr" *ngIf="solicitud.estate ==
+                          'Rechazada'" mat-raised-button>{{solicitud.estate }}</button>
+                      </div>
 
 
-                      <span class="spacer"></span>
-                      <!-- <button class="btDone" *ngIf="solicitud.estate == 'Pendiente'" mat-raised-button>{{solicitud.estate }}</button> -->
-                      <button class="btInProgress" *ngIf="solicitud.estate ==
-                        'Completo'" mat-raised-button>En Estudio</button>
-                      <button class="btToDo" *ngIf="solicitud.estate ==
-                        'Aprobada'" mat-raised-button>{{solicitud.estate }}</button>
-                      <button class="btErr" *ngIf="solicitud.estate ==
-                        'Rechazada'" mat-raised-button>{{solicitud.estate }}</button>
                     </mat-panel-title>
                   </mat-expansion-panel-header>
 
@@ -273,16 +309,21 @@
                       [idSolicitud]="solicitud._id"></app-estudio>
                   </mat-panel-title>
 
-                  <mat-action-row>
-                    <button class="btSelectInProgress" mat-button
-                      (click)="cambiarEstado(solicitud, 'Completo')">En Estudio</button>
-                    <button class="btSelectDone" mat-button
-                      (click)="cambiarEstado(solicitud, 'Aprobada')">Aprobada</button>
-                    <button class="btSelectErr" mat-button
-                      (click)="cambiarEstado(solicitud, 'Rechazada')">Rechazada</button>
-                    <span class="spacer"></span>
 
-                  </mat-action-row>
+                    <div class="row mt-3">
+                      <div class="col-md-6">
+                        <button class="btSelectInProgress btn-block" mat-button (click)="cambiarEstado(solicitud, 'Completo')">En Estudio</button>
+                      </div>
+                      <div class="col-md-6">
+                        <button class="btSelectDone btn-block" mat-button (click)="cambiarEstado(solicitud, 'Aprobada')">Aprobada</button>
+                      </div>
+                      <!-- <div class="col-md-4">
+                        <button class="btSelectErr" mat-button (click)="cambiarEstado(solicitud, 'Rechazada')">Rechazada</button>
+                      </div> -->
+                    <span class="spacer"></span>
+                    </div>
+
+
 
                 </mat-expansion-panel>
               </mat-accordion>
@@ -294,7 +335,6 @@
 
   </div>
 </div>
-
 
 
 <!-- <h3>Formulario:</h3>
