--- a/Front/src/app/dashboard/solicitudes/solicitudes.component.scss
+++ b/Front/src/app/dashboard/solicitudes/solicitudes.component.scss
@@ -16,8 +16,27 @@ mat-expansion-panel-header {
 .cuenta{
   background-color: rgb(165,190,190);
   border-color: cornsilk;
-  border-style: dotted;
-  color: rgb(30, 138, 233);
+  border-style:double;
+  color: rgb(21,84,154);
+}
+.resultados{
+
+  border-color: cornsilk;
+  border-style:double;
+  color: rgb(21,84,154);
+}
+.textA{
+  border-color: black;
+  width: 100%;
+}
+.btn-cuenta{
+  background-color: rgb(21,84,154);
+  color: white;
+}
+.calificacion{
+  border: 1px;
+  border-style: double;
+  border-color: black;
 }
 .k {
   width: 100%;
